Gave main body top margin to prevent overlap

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,1 +1,5 @@
 @import "semantic-ui";
+
+.content-wrapper {
+	padding-top: 55px;
+}
